Fix commit f1d3af3e2d7d, it deleted part of "Driver independent"
Fixes: f1d3af3e2d7d ("added bullets to summary slide and changed title of one section")
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -148,7 +148,7 @@ SKB or Generic Mode XDP
  - XDP hook called from */netif_receive_skb()/*
  - Process packets */after/* packet DMA and skb allocation completed
  - *Larger* number of instructions executed before running XDP program
- - /Driver indep
+ - /Driver independent/
 
 * XDP relationship with eBPF                                         :export:
 :PROPERTIES:
