--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
@@ -268,6 +268,8 @@ Other talks will cover this:
 
 ** Slide: Packet drop performance (from paper)                      :export:
 [[file:images/drop-test.svg]]
+** Slide: Packet redirect performance (from paper)                   :export:
+[[file:images/drop-redirect.svg]]
 
 * Evolving XDP
 :PROPERTIES:
