Fix include file name of redirect graph
The browser could display my SVG file, I just had to included the right file.

Still the quality of the SVG is bad, and I hope Toke can generate
a better version of the SVG graph file.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
@@ -269,7 +269,7 @@ Other talks will cover this:
 ** Slide: Packet drop performance (from paper)                      :export:
 [[file:images/drop-test.svg]]
 ** Slide: Packet redirect performance (from paper)                   :export:
-[[file:images/drop-redirect.svg]]
+[[file:images/redirect-test.svg]]
 
 * Evolving XDP
 :PROPERTIES:
