--- a/areas/mem/page_pool_API.org
+++ b/areas/mem/page_pool_API.org
@@ -341,7 +341,7 @@ return API, or (2) hide it in the page_pool API via clever lockless per CPU
 store (that return pages in a bulk).
 
 Jesper have a lot of details for option (2), as a significant performance gain
-can be acheived by having knowledge about (and separating) what context the
+can be achieved by having knowledge about (and separating) what context the
 kernel is running in (softirq/bh, hardirq, process-context).
 
 * Benchmark based development
@@ -384,8 +384,17 @@ consume the entire budget for 10Gbit/s wirespeed which is 67.2 ns.  Converting,
 doesn't represent any real pps (just to relate this to pps numbers).
 
 
-* Notes
+* XDP optimization for ndo_xdp_xmit
 
-Remember: the keep DMA mapped, is also a feature that needs to be leveraged
-used by the XDP APIs.  Right now, the ndo_xdp_xmit does TX DMA map and DMA
-unmap in completion.
+When xdp_frames are redirected and send out a remote-device via ndo_xdp_xmit,
+then TX frame is again DMA-mapped for transmit on this remote-device, and at
+XDP-TXQ completion time the frame/page is DMA-unmapped again.
+
+On many systems, the underlying DMA-engine/device is the same.  Thus, the
+DMA-addr of the page that we keep DMA-mapped for RX, is actually the same and
+valid for the TX net_device.  It would be an optimization to avoid this
+DMA-map/unmap and replace it with a DMA-sync, if this condition is satisfied.
+
+Thus, we would need an API (accessible by XDP in ndo_xdp_xmit), that can (1)
+tell us if the condition is satisfied, and (2) that can return the DMA-addr to
+be used for TX.
