xdp-future: Fix a few words
Signed-off-by: Toke Høiland-Jørgensen <toke@toke.dk>

--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
@@ -272,10 +272,10 @@ Other talks will cover this:
 :END:
 
 Don't have time look at performance details
-- Go read our [[https://github.com/tohojo/xdp-paper][XDP-paper]]
+- Go read our [[https://github.com/tohojo/xdp-paper][XDP paper]]
 
 Following graphs show:
-- XDP have /closed the gap/ to DPDK, but there is still a gap
+- XDP has /narrowed the gap/ to DPDK, but not quite caught up
 - For packet forwarding, *XDP_TX* is faster than DPDK
 
 
